Fix that D$%^&*#@ wrapping problem with the add/remove measures

--- a/css/groove_writer.css
+++ b/css/groove_writer.css
@@ -210,6 +210,9 @@
 		background: #FFFFFF;
 		white-space: nowrap;
 	}
+	.notes-row-container {
+		display: inline-block;
+	}
 	.heading1 {
 		font-size: 30px;
 		font-weight: bold;
@@ -487,14 +490,13 @@
 		background: transparent;
 	}
 	#addMeasureButton {
+		vertical-align: top;
 		display: inline-block;
-		position:relative;
-		top: -71px;
-		left: 6px;
 		color: #2484C0;
 		cursor: pointer;
 		font-size: 40px;
-		padding-top: 2px;			
+		padding-top: 2px;
+		margin-top: 73px;		
 	}
 	
 	.closeMeasureButton {
